--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.0.6
 
+  google_maps_flutter: ^2.0.6
+  provider: ^5.0.0
+  permission_handler: ^8.1.2
   geolocator: ^7.2.0+1
 
   baseflow_plugin_template:
@@ -39,8 +41,7 @@ dependencies:
 
   flutter_test:
     sdk: flutter
-  provider: ^5.0.0
-  permission_handler: ^8.1.2
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -58,6 +59,8 @@ flutter:
   assets:
      - packages/baseflow_plugin_template/logo.png
      - packages/baseflow_plugin_template/poweredByBaseflow.png
+dev_dependencies: 
+  flutter_lints: ^1.0.3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
